# AstriaBackend

./: .env  .env.defaults  .gitignore  README.md  jest-mongodb-config.ts  package-lock.json  package.json  tsconfig.json
native/: Cargo.toml
native/src/: lib.rs
src/: graphql.generate.ts  index.ts  schema.generate.ts  test.ts
src/classes/: model.service.class.ts
src/config/: auth.ts  constants.ts  database.ts  logger.ts  passport.ts  redis.ts  route-defs.ts  test-db.ts
src/gentools/: modelname.gen.ts  schemablock.gen.ts  type.map.ts
src/interfaces/: quizanswer.interface.ts
src/logger/: logger.ts
src/models/: announcement.model.ts  assign-submission.model.ts  assignment.model.ts  completion.model.ts  course.model.ts  enrollment.model.ts  event.model.ts  layout.model.ts  person.model.ts  quiz-question.model.ts  quiz-submission.model.ts  quiz.model.ts  read-tracker.model.ts  school.model.ts  task.model.ts  upload-submission.model.ts  uploadsubmission.model.ts
src/schemas/: announcement.schema.ts  assign-submission.schema.ts  assignment.schema.ts  completion.schema.ts  course.schema.ts  enrollment.schema.ts  event.schema.ts  layout.schema.ts  person.schema.ts  quiz-question.schema.ts  quiz-submission.schema.ts  quiz.schema.ts  read-tracker.schema.ts  school.schema.ts  task.schema.ts  upload-submission.schema.ts
src/scripts/: graph.schemas.build.ts
src/services/: announcement.service.ts  assign-submission.service.ts  assignment.service.ts  course.service.ts  enrollment.service.ts  event.service.ts  layout.service.ts  person.service.ts  quiz.service.ts  (+3 more)
(+44 files in other folders)
